Email for review stage
Students will now get an email when professors update the review stage of an assignment