@@ -1,17 +1,21 @@
 package edu.oswego.rest.controller.assignment;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.google.gson.Gson;
 import edu.oswego.util.objects.Assignment;
+import edu.oswego.util.utility.SendingMail;
+import edu.oswego.util.objects.Student;
 import edu.oswego.util.objects.authObject;
 import edu.oswego.util.service.IAssignmentService;
+import edu.oswego.util.service.ICourseService;
+import edu.oswego.util.service.IStudentService;
 import edu.oswego.util.service.impl.AssignmentService;
+import edu.oswego.util.service.impl.CourseService;
+import edu.oswego.util.service.impl.StudentService;
 import edu.oswego.util.utility.ResponseMessage;
 import org.json.JSONObject;
 
 // JAX-RS
 import javax.ws.rs.*;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 // Json-B
@@ -23,28 +27,18 @@ import javax.ws.rs.core.Response;
 @Path("/assignment")
 public class AssignmentAPI {
     private static final long serialVersionUID = 1L;
-    private IAssignmentService assignmentService;
-    private Jsonb jsonb = JsonbBuilder.create();
-    private authObject auth = new authObject() ;
+    private final IAssignmentService assignmentService;
+    private final ICourseService courseService;
+    private final IStudentService studentService;
+    private final Jsonb jsonb = JsonbBuilder.create();
+    private final authObject auth = new authObject() ;
 
-    private List<String> ROLE = Arrays.asList("professor");
+    private final List<String> ROLE = List.of("professor");
 
     public AssignmentAPI() {
         assignmentService = new AssignmentService();
-    }
-
-    @GET
-    public Response getAllAssignments(){
-        //TODO This method needs to ensure authentication
-        try {
-            List<Assignment> listOfAssignments = assignmentService.findAll();
-            String res = jsonb.toJson(listOfAssignments);
-            if(listOfAssignments != null) return new ResponseMessage().sendMessage(res,200);
-            else return new ResponseMessage().sendMessage("There are not any assignments in the database.",200);
-        } catch (NumberFormatException ne){
-            System.out.println("There are not any assignments in the database");
-        }
-        return null;
+        courseService = new CourseService();
+        studentService = new StudentService();
     }
 
     @POST
@@ -67,11 +61,10 @@ public class AssignmentAPI {
 
         String token = obj.getString("token");
 
-        if(auth.isAuthenticated(token,ROLE) == false){
+        if(!auth.isAuthenticated(token, ROLE)){
             return new ResponseMessage().sendMessage("NotAuthenticated",404);
         }
 
-        //TODO This method needs to ensure authentication
         try {
             int assignmentId = Integer.parseInt(_assignmentId);
             Assignment assignment = assignmentService.findOne(assignmentId);
@@ -86,7 +79,7 @@ public class AssignmentAPI {
 
     @POST
     @Path("/update")
-        public Response updateAssignment(String data) throws JsonProcessingException {
+    public Response updateAssignment(String data) {
 
         JSONObject obj = new JSONObject(data);
         JSONObject payloadJSON ;
@@ -105,7 +98,7 @@ public class AssignmentAPI {
 
         String token = obj.getString("token");
 
-        if(auth.isAuthenticated(token,ROLE) == false){
+        if(!auth.isAuthenticated(token, ROLE)){
             return new ResponseMessage().sendMessage("NotAuthenticated",404);
         }
 
@@ -113,10 +106,10 @@ public class AssignmentAPI {
         assignment = assignmentService.update(assignment);
         String res = jsonb.toJson(assignment);
         return new ResponseMessage().sendMessage(res,200);
-        }
+    }
     
     @POST
-    public Response postAssignment(String data) throws JsonProcessingException {
+    public Response postAssignment(String data) {
 
         JSONObject obj = new JSONObject(data);
         JSONObject payloadJSON ;
@@ -135,13 +128,19 @@ public class AssignmentAPI {
 
         String token = obj.getString("token");
 
-        if(auth.isAuthenticated(token,ROLE) == false){
+        if(!auth.isAuthenticated(token, ROLE)){
             return new ResponseMessage().sendMessage("NotAuthenticated",404);
         }
 
         Assignment assignment =  jsonb.fromJson(payload, Assignment.class);
         assignment = assignmentService.save(assignment);
         String res = jsonb.toJson(assignment);
+        int courseID = assignment.getCourseID();
+        ArrayList<Student> studs = (ArrayList<Student>) studentService.findStudentsByCourseID(courseID);
+        SendingMail mailer = new SendingMail();
+        for(Student stud : studs){
+            mailer.assignmentAvailable(stud.getEmail(), courseService.findOne(courseID).getTitle(), assignment.getTitle());
+        }
         return new ResponseMessage().sendMessage(res,200);
     }
 
@@ -167,7 +166,7 @@ public class AssignmentAPI {
 
         String token = obj.getString("token");
 
-        if(auth.isAuthenticated(token,ROLE) == false){
+        if(!auth.isAuthenticated(token, ROLE)){
             return new ResponseMessage().sendMessage("NotAuthenticated",404);
         }
         try {
@@ -183,4 +182,20 @@ public class AssignmentAPI {
         }
         return null;
     }
+
+    /*
+    @GET
+    public Response getAllAssignments(){
+        try {
+            List<Assignment> listOfAssignments = assignmentService.findAll();
+            String res = jsonb.toJson(listOfAssignments);
+            if(listOfAssignments != null) return new ResponseMessage().sendMessage(res,200);
+            else return new ResponseMessage().sendMessage("There are not any assignments in the database.",200);
+        } catch (NumberFormatException ne){
+            System.out.println("There are not any assignments in the database");
+        }
+        return null;
+    }
+
+     */
 }
